@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,6 +25,9 @@
 // program to generate rsakeys.ks. does not need to run during testing
 // checked into the workspace so that the keystore file can be recreated
 // in the future if needed.
+//
+// To run:
+//   java --add-exports java.base/sun.security.x509=ALL-UNNAMED GenKeyStore.java
 
 // @author Andreas Sterbenz
 
@@ -43,26 +46,22 @@ public class GenKeyStore {
 
     static final char[] password = "test12".toCharArray();
 
-    private static X509Certificate getCertificate(String suffix, PublicKey publicKey, PrivateKey privateKey) throws Exception {
+    private static X509Certificate getCertificate(String suffix,
+                                                    PublicKey publicKey,
+                                                    PrivateKey privateKey) throws Exception {
         X500Name name = new X500Name("CN=Dummy Certificate " + suffix);
         String algorithm = "SHA1with" + publicKey.getAlgorithm();
         Date date = new Date();
-        AlgorithmId algID = AlgorithmId.getAlgorithmId(algorithm);
 
         X509CertInfo certInfo = new X509CertInfo();
+        certInfo.setVersion(new CertificateVersion(CertificateVersion.V1));
+        certInfo.setSerialNumber(new CertificateSerialNumber(1));
+        certInfo.setSubject(name);
+        certInfo.setIssuer(name);
+        certInfo.setKey(new CertificateX509Key(publicKey));
+        certInfo.setValidity(new CertificateValidity(date, date));
 
-        certInfo.set(X509CertInfo.VERSION, new CertificateVersion(CertificateVersion.V1));
-        certInfo.set(X509CertInfo.SERIAL_NUMBER, new CertificateSerialNumber(1));
-        certInfo.set(X509CertInfo.ALGORITHM_ID, new CertificateAlgorithmId(algID));
-        certInfo.set(X509CertInfo.SUBJECT, name);
-        certInfo.set(X509CertInfo.ISSUER, name);
-        certInfo.set(X509CertInfo.KEY, new CertificateX509Key(publicKey));
-        certInfo.set(X509CertInfo.VALIDITY, new CertificateValidity(date, date));
-
-        X509CertImpl cert = new X509CertImpl(certInfo);
-        cert.sign(privateKey, algorithm);
-
-        return cert;
+        return X509CertImpl.newSigned(certInfo, privateKey, algorithm);
     }
 
     private static void addToKeyStore(KeyStore ks, KeyPair kp, String name) throws Exception {
